--- a/HelloBluetooth/app/build.gradle
+++ b/HelloBluetooth/app/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.+'
+    compile project(':android-beacon-library-2.7')
 }
