--- a/HelloBluetooth/app/src/main/AndroidManifest.xml
+++ b/HelloBluetooth/app/src/main/AndroidManifest.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.livroandroid.bluetooth" >
+<manifest
+    package="br.com.livroandroid.bluetooth"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-
+        android:theme="@style/AppTheme">
         <activity
-            android:name="br.com.livroandroid.bluetooth.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".BluetoothCheckActivity"
+            android:label="@string/bluetooth_check"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".ListaDevicesActivity"
+            android:label="@string/lista_devices"
+            android:parentActivityName=".MainActivity"/>
+        <!-- <activity android:name=".BluetoothChatServerActivity" android:label="@string/chat_server" android:parentActivityName=".MainActivity" /> -->
 
-        <activity android:name=".BluetoothCheckActivity" android:label="@string/bluetooth_check" android:parentActivityName=".MainActivity" />
-        <activity android:name=".ListaDevicesActivity" android:label="@string/lista_devices" android:parentActivityName=".MainActivity" />
-     <!--  <activity android:name=".BluetoothChatServerActivity" android:label="@string/chat_server" android:parentActivityName=".MainActivity" /> -->
-
+        <activity
+            android:name=".BeaconTest"
+            android:label="@string/beacon_teste"
+            android:parentActivityName=".MainActivity"
+            />
     </application>
 
 </manifest>
